Fix CSS overlaps

--- a/client/src/components/toolbar/colorPicker.css
+++ b/client/src/components/toolbar/colorPicker.css
@@ -1,5 +1,5 @@
 .colorpicker-padding {
-  margin: 1em 0 1em 0;
+  margin: 1em 0 0 0;
 }
 
 .color-tab {
