--- a/client/src/components/user/profile.css
+++ b/client/src/components/user/profile.css
@@ -54,6 +54,6 @@
   text-align: center;
 }
 
-.col-md-6 {
+.bio {
   padding-top: 30px;
 }
